--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,6 +32,7 @@ html,body{
 
 #main>.row{
   margin-bottom:40px;
+  display:block;
 }
 
 #main {
@@ -123,13 +124,16 @@ html,body{
 
 
 #activityList {
-  position: absolute;
-  left: 50%;
   margin-top: 15px;
-  -webkit-transform: translate(-50%, 0%);
-  -moz-transform: translate(-50%, 0%);
-  -o-transform: translate(-50%, 0%);
-  transform: translate(-50%, 0%);
+  overflow: auto;
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align:center;
 }
 
 #activityList li {
@@ -141,6 +145,7 @@ html,body{
   font-weight: bold;
   border-radius: 0;
   padding: 15px 0px 0px 15px;
+  display:inline-block;
 }
 
 #activityList li.pinned {
